--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,13 +10,17 @@ jobs:
       - run: sudo apt-get update -y
       - run: >-
           sudo apt-get install -y
+          texlive-publishers
           texlive-latex-extra
           texlive-fonts-recommended
           texlive-science
           texlive-pictures
           latexmk
       - uses: actions/checkout@v2
-      - run: latexmk -pdflatex='pdflatex -shell-escape -interaction nonstopmode' -pdf paper.tex
+      - run: >-
+          latexmk
+          -pdflatex='pdflatex -shell-escape -interaction nonstopmode'
+          -pdf paper.tex
       - id: create_release
         uses: actions/create-release@v1
         env:
