--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,7 +19,7 @@ jobs:
       - uses: actions/checkout@v2
       - run: >-
           latexmk
-          -pdflatex='pdflatex -shell-escape -interaction nonstopmode'
+          -pdflatex='lualatex -shell-escape -interaction nonstopmode'
           -pdf paper.tex
       - id: create_release
         uses: actions/create-release@v1
